# os_multithread_backup_tool

./: CMakeLists.txt  log.txt
include/: backup.h  compress.h  encrypt.h  logger.h
src/: backup.cpp  compress.cpp  encrypt.cpp  gui.cpp  logger.cpp  main.cpp
